--- a/index.html
+++ b/index.html
@@ -206,7 +206,22 @@
       </div> -->
 
       <div class="aside">
-        <h2>Services</h2>
+        <h2>History</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veniam
+          expedita itaque at saepe eius reprehenderit temporibus doloremque
+          totam laudantium assumenda obcaecati quisquam velit, ullam minus dicta
+          deserunt maiores dolorem.
+        </p>
+        <img src="Images/nature1.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+          cupiditate ratione blanditiis voluptas distinctio quia sunt ullam
+          accusantium officiis exercitationem.
+        </p>
+      </div>
+      <div class="aside">
+        <h2>About Us</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veniam
           expedita itaque at saepe eius reprehenderit temporibus doloremque
@@ -236,22 +251,7 @@
         </p>
       </div>
       <div class="aside">
-        <h2>Services</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veniam
-          expedita itaque at saepe eius reprehenderit temporibus doloremque
-          totam laudantium assumenda obcaecati quisquam velit, ullam minus dicta
-          deserunt maiores dolorem.
-        </p>
-        <img src="Images/nature1.jpg" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
-          cupiditate ratione blanditiis voluptas distinctio quia sunt ullam
-          accusantium officiis exercitationem.
-        </p>
-      </div>
-      <div class="aside">
-        <h2>Services</h2>
+        <h2>Products</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veniam
           expedita itaque at saepe eius reprehenderit temporibus doloremque
